--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,10 @@ combine_as_imports = True
 
 [tool:pytest]
 addopts = -rxXs
+asyncio_mode = strict
 markers =
   copied_from(source, changes=None): mark test as copied from somewhere else, along with a description of changes made to accodomate e.g. our test setup
 
 [coverage:run]
 omit = venv/*
-include = httpx/*, tests/*
+include = broadcaster/*, tests/*
