--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e .[redis,postgres,kafka]
+-e .[redis,postgres,kafka,google-cloud-pubsub]
 
 # Documentation
 mkdocs
@@ -11,15 +11,16 @@ wheel
 
 # Tests & Linting
 autoflake
-black==20.8b1
-coverage==5.3
+black
+coverage
 flake8
 flake8-bugbear
-flake8-pie==0.5.*
-isort==5.*
+flake8-pie
+isort
 mypy
-pytest==5.*
+pytest
 pytest-asyncio
+pytest-sugar
 pytest-trio
 trio
 trio-typing
